- 引入虚拟线程 - 修改缩略图标